; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/vc4/extr_vc4_bo.c_vc4_grab_bin_bo.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/vc4/extr_vc4_bo.c_vc4_grab_bin_bo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vc4_dev = type { i32 }
%struct.vc4_file = type { i64 }

@ENODEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vc4_dev*, %struct.vc4_file*)* @vc4_grab_bin_bo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vc4_grab_bin_bo(%struct.vc4_dev* %0, %struct.vc4_file* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.vc4_dev*, align 8
  %5 = alloca %struct.vc4_file*, align 8
  %6 = alloca i32, align 4
  store %struct.vc4_dev* %0, %struct.vc4_dev** %4, align 8
  store %struct.vc4_file* %1, %struct.vc4_file** %5, align 8
  %7 = load %struct.vc4_dev*, %struct.vc4_dev** %4, align 8
  %8 = getelementptr inbounds %struct.vc4_dev, %struct.vc4_dev* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %2
  %12 = load i32, i32* @ENODEV, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %3, align 4
  br label %30

14:                                               ; preds = %2
  %15 = load %struct.vc4_file*, %struct.vc4_file** %5, align 8
  %16 = getelementptr inbounds %struct.vc4_file, %struct.vc4_file* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %14
  store i32 0, i32* %3, align 4
  br label %30

20:                                               ; preds = %14
  %21 = load %struct.vc4_dev*, %struct.vc4_dev** %4, align 8
  %22 = load %struct.vc4_file*, %struct.vc4_file** %5, align 8
  %23 = getelementptr inbounds %struct.vc4_file, %struct.vc4_file* %22, i32 0, i32 0
  %24 = call i32 @vc4_v3d_bin_bo_get(%struct.vc4_dev* %21, i64* %23)
  store i32 %24, i32* %6, align 4
  %25 = load i32, i32* %6, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %20
  %28 = load i32, i32* %6, align 4
  store i32 %28, i32* %3, align 4
  br label %30

29:                                               ; preds = %20
  store i32 0, i32* %3, align 4
  br label %30

30:                                               ; preds = %29, %27, %19, %11
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @vc4_v3d_bin_bo_get(%struct.vc4_dev*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
